--- a/app/views/index.html
+++ b/app/views/index.html
@@ -57,7 +57,64 @@
             <a href="/mvp1/signin" class="govuk-button govuk-!-margin-right-1">View MVP prototype</a>
             <a href="/mvp1/dashboard-service-prap-no-orgs" class="govuk-button">View 'no organisations' dashboard</a>
 
-            <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+            <h3 class="govuk-heading-m">Confidence level</h3>
+
+            <details class="govuk-details" role="group">
+                <summary
+                    class="govuk-details__summary"
+                    role="button"
+                    aria-controls="details-content-confidence-levels"
+                    aria-expanded="false"
+                >
+                    <span class="govuk-details__summary-text">
+                        What is this?
+                    </span>
+                </summary>
+
+                <div
+                    class="govuk-details__text"
+                    id="details-content-confidence-levels"
+                    aria-hidden="true"
+                >
+                    Confidence can rise and fall in the course of a user journey, depending on what we know at that time. This helps the team, and the wider organisation, understand and prioritise what needs more work.
+                </div>
+            </details>
+
+            <table class="govuk-table">
+                <thead class="govuk-table__head">
+                    <tr class="govuk-table__row">
+                        <th class="govuk-table__header" scope="col">User journey step</th>
+                        <th class="govuk-table__header" scope="col">Confidence</th>
+                    </tr>
+                </thead>
+
+                <tbody class="govuk-table__body">
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell"><a href="/mvp1/dashboard-service-prap">Service admin dashboard</a></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--high">high</span></td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell"><a href="/mvp1/organisation-list-prap">Organisation list landing</a></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--low">low</span></td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell"><a href="/mvp1/organisation-add-prap">Add a new organisation</a></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">medium</span></td>
+                    </tr>
+
+                   <tr class="govuk-table__row">
+                        <td class="govuk-table__cell"><a href="/mvp1/user-add-user-prap-org">Add a new user (as a service admin)</a></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--low">low</span></td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell"><a href="/mvp1/user-list-prap">View all users for a service</a></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">medium</span></td>
+                    </tr>
+                </tbody>
+            </table>
 
             <time datetime="2019-11-27" class="govuk-caption-l">27 November 2019</time>
 
@@ -71,9 +128,39 @@
 
             <a href="/v4/signin" class="govuk-button govuk-!-margin-right-1">View v4 prototype</a>
             <a href="/v4/dashboard-service-prap-no-orgs" class="govuk-button">View 'no organisations' dashboard</a>
-        {% endset %}
 
-        {% set previousVersionsHtml %}
+            <!--<table class="govuk-table">
+                <thead class="govuk-table__head">
+                    <tr class="govuk-table__row">
+                        <th class="govuk-table__header" scope="col">User research finding</th>
+                        <th class="govuk-table__header" scope="col">Potential solutions</th>
+                        <th class="govuk-table__header" scope="col">Iteration made</th>
+                    </tr>
+                </thead>
+
+                <tbody class="govuk-table__body">
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell">Finding 1</td>
+                        <td class="govuk-table__cell">Interpretation 1</td>
+                        <td class="govuk-table__cell">Iteration 1</td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell">Finding 2</td>
+                        <td class="govuk-table__cell">Interpretation 2</td>
+                        <td class="govuk-table__cell">Iteration 2</td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell">Finding 3</td>
+                        <td class="govuk-table__cell">Interpretation 3</td>
+                        <td class="govuk-table__cell">Iteration 3</td>
+                    </tr>
+                </tbody>
+            </table>-->
+
+            <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+
             <time datetime="2019-10-24" class="govuk-caption-l">24 October 2019</time>
 
             <h2 class="govuk-heading-l" id="v3">v3</h2>
@@ -361,6 +448,15 @@
             </ul>
         {% endset %}
 
+        {% set devVersionsHtml %}
+            <time datetime="2019-11-28" class="govuk-caption-l">28 November 2019</time>
+
+            <h2 class="govuk-heading-l">Dev-ready v1</h2>
+
+            <a href="/dev1/signin" class="govuk-button govuk-!-margin-right-1">View prototype</a>
+            <a href="/dev1/dashboard-service-prap-no-orgs" class="govuk-button">View 'no organisations' dashboard</a>
+        {% endset %}
+
         {{ govukTabs({
             items: [
                 {
@@ -371,10 +467,10 @@
                     }
                 },
                 {
-                    label: "Previous versions",
-                    id: "previous-versions",
+                    label: "Dev-ready versions",
+                    id: "dev-versions",
                     panel: {
-                        html: previousVersionsHtml
+                        html: devVersionsHtml
                     }
                 }
             ]
